# signal-hub

./: .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/rules/: architecture.md  integrations.md  product.md  security.md  testing.md
apps/api/: .env.example  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: c2e038558140_initial_schema.py  d4f501c82e91_add_history_id_to_integrations.py
apps/api/app/: config.py  main.py
apps/api/app/db/: seed.py  session.py
apps/api/app/db/models/: __init__.py  event.py  integration.py  message.py  task.py
apps/api/app/routers/: feed.py  gcal.py  gmail.py  integrations.py  messages.py  notion.py
apps/api/app/schemas/: gmail.py
apps/api/app/services/: gcal.py  gmail.py  notion.py
apps/api/tests/: conftest.py  test_feed.py  test_gcal.py  test_gmail.py  test_health.py  test_notion.py
apps/web/: .env.example  next.config.ts  package.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/lib/: api.ts  types.ts
docs/: architecture.md  google-oauth-setup.md  product-spec.md
